--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -279,7 +279,7 @@
 
             <div class="content">
                 <p><strong>Investigador Principal:</strong> Kenneth Bunker</p>
-                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0e656b60606b7a66206c7b60656b7c4e7b7d7d206d62">[email&#160;protected]</a></p>
+                <p><strong>Email:</strong> kenneth.bunker@uss.cl</p>
                 
                 <p style="margin-top: 2rem;"><strong>Afiliaciones:</strong></p>
                 <p>Universidad San Sebastián<br>
@@ -290,12 +290,12 @@
                 Departamento de Economía<br>
                 Verona, Italia</p>
                 
-                <p style="margin-top: 2rem;">Para preguntas sobre el dataset, colaboraciones de investigación o soporte técnico, por favor contacte directamente por email.</p>
+                <p style="margin-top: 2rem;">Para preguntas sobre la base de datos, colaboraciones de investigación o soporte técnico, por favor contactarnos directamente por email.</p>
             </div>
 
             <div class="info-box">
                 <h3>Problemas del Dataset y Soporte Técnico</h3>
-                <p>Para preguntas técnicas sobre el dataset, definiciones de variables o archivos de replicación, por favor envíe un email con "CPLD" en el asunto.</p>
+                <p>Para preguntas técnicas sobre la base de datos, definiciones de variables o archivos de replicación, por favor envíe un email con "CPLD" en el asunto.</p>
                 <p>Tiempo de respuesta: típicamente dentro de 48 horas durante días hábiles.</p>
             </div>
 
@@ -307,7 +307,7 @@
 
             <div class="info-box">
                 <h3>Consultas de Medios y Prensa</h3>
-                <p>Para solicitudes de medios, entrevistas o comentarios sobre política y elecciones chilenas, por favor contacte directamente por email.</p>
+                <p>Para solicitudes de medios, entrevistas o comentarios sobre política y elecciones chilenas, por favor contactarnos directamente por email.</p>
             </div>
 
             <div class="info-box">
