--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -279,7 +279,7 @@
 
             <div class="content">
                 <p><strong>Principal Investigator:</strong> Kenneth Bunker</p>
-                <p><strong>Email:</strong> <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="0d66686363687965236f786366687f4d787e7e236e61">[email&#160;protected]</a></p>
+                <p><strong>Email:</strong> kenneth.bunker@uss.cl</p>
                 
                 <p style="margin-top: 2rem;"><strong>Affiliations:</strong></p>
                 <p>Universidad San Sebastián<br>
