--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -255,7 +255,7 @@
 
                 <p>Al ofrecer medidas consistentes y comparables en un número variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideológico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cómo la democracia chilena, alguna vez estable, evolucionó a través de períodos de reforma institucional y crisis política.</p>
 
-                <h2 class="section-title">Alcance del Dataset</h2>
+                <h2 class="section-title">Alcance de la base de datos</h2>
 
                 <p>El CPLD v1.0 incluye <strong>5.301 observaciones en 42 variables</strong> cubriendo:</p>
 
@@ -274,7 +274,7 @@
 
                 <h2 class="section-title">Variables Clave</h2>
 
-                <p>El dataset incluye 42 variables estandarizadas organizadas en varias categorías:</p>
+                <p>La base de datos incluye 42 variables estandarizadas organizadas en varias categorías:</p>
 
                 <p><strong>Estructura Electoral:</strong></p>
                 <ul>
@@ -337,7 +337,7 @@
 
                 <h2 class="section-title">Metodología</h2>
 
-                <p>El dataset fue construido utilizando el lenguaje de programación R (versión 4.2.3) con paquetes clave incluyendo codebookr, dplyr, tidyr, readxl y officer. Todos los resultados electorales fueron recolectados sistemáticamente de fuentes oficiales (SERVEL) y estandarizados para comparación temporal cruzada.</p>
+                <p>La base de datos fue construido utilizando el lenguaje de programación R (versión 4.2.3) con paquetes clave incluyendo codebookr, dplyr, tidyr, readxl y officer. Todos los resultados electorales fueron recolectados sistemáticamente de fuentes oficiales (SERVEL) y estandarizados para comparación temporal cruzada.</p>
 
                 <p>Todas las medidas siguen estándares establecidos de política comparada con la atribución apropiada:</p>
                 <ul>
@@ -349,14 +349,14 @@
                     <li><strong>Fraccionamiento étnico:</strong> Alesina et al. (2003), datos del Censo chileno (2002, 2017)</li>
                 </ul>
 
-                <p>La estructura del dataset permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros históricos y están documentados en el libro de códigos.</p>
+                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros históricos y están documentados en el libro de códigos.</p>
 
                 <h2 class="section-title">Citación</h2>
 
-                <p>Al utilizar el CPLD en su investigación, por favor cite tanto el dataset como la publicación asociada:</p>
+                <p>Al utilizar el CPLD en su investigación, por favor cite tanto la base de datos como la publicación asociada:</p>
 
                 <div class="highlight-box">
-                    <strong>Dataset:</strong><br>
+                    <strong>Base de Datos:</strong><br>
                     Bunker, Kenneth. 2025. "Chilean Political Landscape Dataset (CPLD)". Harvard Dataverse, V1.<br>
                     DOI: <a href="https://doi.org/10.7910/DVN/NGRY3R" style="color: var(--blue);" target="_blank">10.7910/DVN/NGRY3R</a><br><br>
 
