--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -294,7 +294,7 @@
             </div>
 
             <div class="info-box">
-                <h3>Problemas del Dataset y Soporte Técnico</h3>
+                <h3>Problemas de la base de datos y Soporte Técnico</h3>
                 <p>Para preguntas técnicas sobre la base de datos, definiciones de variables o archivos de replicación, por favor envíe un email con "CPLD" en el asunto.</p>
                 <p>Tiempo de respuesta: típicamente dentro de 48 horas durante días hábiles.</p>
             </div>
@@ -311,10 +311,10 @@
             </div>
 
             <div class="info-box">
-                <h3>Acceso al Dataset</h3>
+                <h3>Acceso a la base de datos</h3>
                 <p>El CPLD está disponible abiertamente a través de Harvard Dataverse. No se requiere permiso especial para descargar o usar los datos.</p>
                 <p>Acceso: <a href="https://doi.org/10.7910/DVN/NGRY3R" target="_blank" style="color: var(--blue);">doi.org/10.7910/DVN/NGRY3R</a></p>
-                <p>Si utiliza el dataset en su investigación, por favor cite la publicación asociada.</p>
+                <p>Si utiliza la base de datos en su investigación, por favor cite la publicación asociada.</p>
             </div>
 
         </main>
