--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de CPLD · Chilean Political Landscape Dataset · Datos Electorales 1989-2024</title>
+    <title>Acerca de · CLPD · Chilean Political Landscape Dataset</title>
     <meta name="description" content="Learn about the Chilean Political Landscape Dataset (CPLD): comprehensive district-level electoral data, party system indicators, ENP measures, polarization indices, and disproportionality calculations for Chilean democracy research.">
     <meta name="keywords" content="Chile electoral data methodology, political science research data, ENP calculation, effective number of parties, Laakso Taagepera, Gallagher index, party system research, Chilean democracy data, comparative politics methods, electoral system analysis, district magnitude, seat product model">
     <meta name="author" content="Kenneth Bunker">
