--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact · CPLD · Chilean Political Data Research Collaboration</title>
+    <title>Contact · CLPD · Chilean Political Landscape Dataset</title>
     <meta name="description" content="Contact Kenneth Bunker for questions about the Chilean Political Landscape Dataset, research collaborations, dataset support, or electoral data analysis. Open access data available via Harvard Dataverse.">
     <meta name="keywords" content="Chile political data contact, electoral data researcher, political science collaboration, Chilean democracy research, dataset support, Kenneth Bunker contact, Universidad San Sebastián, University of Verona">
     <meta name="author" content="Kenneth Bunker">
