--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CPLD · Chilean Political Landscape Dataset · Datos Electorales Chile 1989-2024</title>
+    <title>CLPD · Chilean Political Landscape Dataset</title>
     <meta name="description" content="Base de datos longitudinal de resultados electorales a nivel distrital que cubre la democracia chilena 1989-2024. Fragmentación del sistema de partidos, orientación ideológica, medidas ENP y datos de cambio institucional. Lista para análisis en R y Python.">
     <meta name="keywords" content="datos políticos Chile, base de datos elecciones Chile, fragmentación sistema de partidos, competencia electoral Chile, datos ciencia política, datos política comparada, elecciones América Latina, medidas ENP, datos nivel distrital, dataset R, datos Python pandas, panorama político Chile, datos democracia, datos políticos longitudinales, Harvard Dataverse, sistemas electorales, índices desproporcionalidad, índice Gallagher, nacionalización partidos, polarización ideológica">
     <meta name="author" content="Kenneth Bunker">
