--- a/cpld/index.html
+++ b/cpld/index.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CPLD · Chilean Political Landscape Dataset · 1989-2024</title>
+    <title>CLPD · Chilean Political Landscape Dataset</title>
     <meta name="description" content="Longitudinal dataset of district-level electoral outcomes covering Chilean democracy 1989-2024. Party system fragmentation, ideological orientation, ENP measures, and institutional change data. Ready for R and Python analysis.">
     <meta name="keywords" content="Chile political data, Chilean elections dataset, party system fragmentation, electoral competition Chile, political science dataset, comparative politics data, Latin America elections, ENP measures, district-level data, R dataset, Python pandas data, political landscape Chile, democracy dataset, longitudinal political data, Harvard Dataverse, electoral systems, disproportionality indices, Gallagher index, party nationalization, ideological polarization">
     <meta name="author" content="Kenneth Bunker">
