--- a/cpld/index.html
+++ b/cpld/index.html
@@ -120,7 +120,7 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 0.75rem;
             margin-bottom: 1.5rem;
         }
 
@@ -383,8 +383,8 @@
             <div class="logo-container">
                 <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                 <div class="logo-text">
-                    <h1 class="logo">Chilean Political Landscape Dataset</h1>
-                    <p class="tagline">CPLD· 1989—2024</p>
+                    <h1 class="logo">CPLD</h1>
+                    <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
                 </div>
             </div>
             <nav class="nav-tabs">
