--- a/cpld/index.html
+++ b/cpld/index.html
@@ -207,6 +207,46 @@
             border-bottom: 1px solid var(--grey-light);
         }
 
+        .mailing-section {
+            margin: 3rem 0 4rem;
+            padding: 1.5rem 0;
+            border-top: 1px solid var(--grey-light);
+            border-bottom: 1px solid var(--grey-light);
+        }
+
+        .mailing-section h2 {
+            font-size: 0.9375rem;
+            font-weight: 600;
+            color: var(--black);
+            margin-bottom: 0.5rem;
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+        }
+
+        .mailing-section p {
+            font-size: 0.95rem;
+            color: var(--grey-mid);
+            margin-bottom: 1rem;
+            font-weight: 300;
+        }
+
+        .mailing-btn {
+            display: inline-block;
+            font-size: 0.85rem;
+            font-weight: 500;
+            color: var(--white);
+            background: var(--blue);
+            padding: 0.5rem 1.25rem;
+            border-radius: 3px;
+            text-decoration: none;
+            transition: all 0.2s ease;
+        }
+
+        .mailing-btn:hover {
+            background: var(--blue-dark);
+        }
+
+
         .stat {
             text-align: left;
         }
@@ -424,6 +464,16 @@
                 <div class="stat-label">Dataset Size</div>
             </div>
         </div>
+
+        <div class="mailing-section">
+            <h2>Get Updates</h2>
+            <p>New releases, methods notes, and seminars.</p>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6pOOzru5N6KQDFBJq2nNopa2AmbwhHM1X8INE-SwIt2skyw/viewform?usp=publish-editor" 
+               target="_blank" class="mailing-btn">Subscribe</a>
+        </div>
+
+<section class="section">
+    <h2 class="section-title">Data Access</h2>
 
         <section class="section">
             <h2 class="section-title">Data Access</h2>
