--- a/cpld/index.html
+++ b/cpld/index.html
@@ -207,69 +207,60 @@
             border-bottom: 1px solid var(--grey-light);
         }
 
-        .mailing-section {
-            margin: 3rem 0 4rem;
-            padding: 1.5rem 0;
-            border-top: 1px solid var(--grey-light);
-            border-bottom: 1px solid var(--grey-light);
-        }
+.mailing-section {
+    margin: 2rem 0 3rem;
+    padding: 1rem 0;
+    border-top: 1px solid var(--grey-light);
+    border-bottom: 1px solid var(--grey-light);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
 
-        .mailing-section h2 {
-            font-size: 0.9375rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 0.5rem;
-            text-transform: uppercase;
-            letter-spacing: 0.08em;
-        }
+.mailing-section h2 {
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: var(--black);
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+    white-space: nowrap;
+}
 
-        .mailing-section p {
-            font-size: 0.95rem;
-            color: var(--grey-mid);
-            margin-bottom: 1rem;
-            font-weight: 300;
-        }
+.mailing-section p {
+    font-size: 0.85rem;
+    color: var(--grey-mid);
+    margin: 0;
+    flex: 1;
+}
 
-        .mailing-btn {
-            display: inline-block;
-            font-size: 0.85rem;
-            font-weight: 500;
-            color: var(--white);
-            background: var(--blue);
-            padding: 0.5rem 1.25rem;
-            border-radius: 3px;
-            text-decoration: none;
-            transition: all 0.2s ease;
-        }
+.mailing-section form {
+    display: flex;
+    gap: 0.5rem;
+    max-width: 340px;
+    flex-shrink: 0;
+}
 
-        .mailing-btn:hover {
-            background: var(--blue-dark);
-        }
+.mailing-section input[type="email"] {
+    flex: 1;
+    padding: 0.4rem 0.55rem;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 0.8rem;
+    border: 1px solid var(--grey-light);
+    border-radius: 3px;
+    outline: none;
+}
 
-        .mailing-section form {
-            display: flex;
-            gap: 0.75rem;
-            max-width: 420px;
-        }
+.mailing-section input[type="email"]:focus {
+    border-color: var(--blue);
+}
 
-        .mailing-section input[type="email"] {
-            flex: 1;
-            padding: 0.45rem 0.6rem;
-            font-family: 'Work Sans', sans-serif;
-            font-size: 0.85rem;
-            border: 1px solid var(--grey-light);
-            border-radius: 3px;
-            outline: none;
-        }
-
-        .mailing-section input[type="email"]:focus {
-            border-color: var(--blue);
-        }
-
-        .mailing-section button {
-            border: none;
-            cursor: pointer;
-        }
+.mailing-btn {
+    font-size: 0.75rem;
+    padding: 0.4rem 0.9rem;
+    border-radius: 3px;
+}
 
         .stat {
             text-align: left;
@@ -437,7 +428,19 @@
                 font-size: 0.75rem;
                 padding: 1rem;
             }
+
+            .mailing-section {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0.75rem;
+            }
+
+            .mailing-section form {
+                width: 100%;
+                max-width: none;
+            }
         }
+
     </style>
 </head>
 <body>
