--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -425,6 +425,16 @@
             </div>
         </div>
 
+<div class="mailing-section">
+    <h2>Suscríbete a noticias</h2>
+    <p>Nuevas versiones, notas de investigación y seminarios.</p>
+
+    <form action="https://docs.google.com/forms/d/e/1FAIpQLSfrXMlFNZjMrfNgybhZOzF0jwHnFxKxWOrz8E6McFQjmVj8hA/formResponse" 
+          method="POST" target="_blank">
+        <input type="email" name="entry.4236083217395177297" placeholder="Tu e-mail" required>
+        <button type="submit" class="mailing-btn">Subscribe</button>
+    </form>
+</div>
         <section class="section">
             <h2 class="section-title">Acceso a los Datos</h2>
             <ul class="link-list">
