--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -207,9 +207,65 @@
             border-bottom: 1px solid var(--grey-light);
         }
 
-        .stat {
+ .mailing-section {
+    margin: 2rem 0 3rem;
+    padding: 1rem 0;
+    border-top: 1px solid var(--grey-light);
+    border-bottom: 1px solid var(--grey-light);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1.5rem;
+}
+
+.mailing-section h2 {
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: var(--black);
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.08em;
+    white-space: nowrap;
+}
+
+.mailing-section p {
+    font-size: 0.85rem;
+    color: var(--grey-mid);
+    margin: 0;
+    flex: 1;
+}
+
+.mailing-section form {
+    display: flex;
+    gap: 0.5rem;
+    max-width: 340px;
+    flex-shrink: 0;
+}
+
+.mailing-section input[type="email"] {
+    flex: 1;
+    padding: 0.4rem 0.55rem;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 0.8rem;
+    border: 1px solid var(--grey-light);
+    border-radius: 3px;
+    outline: none;
+}
+
+.mailing-section input[type="email"]:focus {
+    border-color: var(--blue);
+}
+
+.mailing-btn {
+    font-size: 0.75rem;
+    padding: 0.4rem 0.9rem;
+    border-radius: 3px;
+}
+
+       .stat {
             text-align: left;
         }
+
 
         .stat-number {
             font-family: 'JetBrains Mono', monospace;
@@ -373,7 +429,19 @@
                 font-size: 0.75rem;
                 padding: 1rem;
             }
+
+            .mailing-section {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0.75rem;
+            }
+
+            .mailing-section form {
+                width: 100%;
+                max-width: none;
+            }
         }
+        
     </style>
 </head>
 <body>
