--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de · CLPD · Chilean Political Landscape Dataset</title>
+    <title>Acerca de Â· CLPD Â· Chilean Political Landscape Dataset</title>
     <meta name="description" content="Learn about the Chilean Political Landscape Dataset (CPLD): comprehensive district-level electoral data, party system indicators, ENP measures, polarization indices, and disproportionality calculations for Chilean democracy research.">
     <meta name="keywords" content="Chile electoral data methodology, political science research data, ENP calculation, effective number of parties, Laakso Taagepera, Gallagher index, party system research, Chilean democracy data, comparative politics methods, electoral system analysis, district magnitude, seat product model">
     <meta name="author" content="Kenneth Bunker">
@@ -88,8 +88,7 @@
         .logo-text {
             flex: 1;
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            align-items: center;
         }
 
         .nav-tabs {
@@ -117,19 +116,11 @@
             font-weight: 500;
         }
 
-        .logo {
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 2rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 0.25rem;
-            letter-spacing: -0.02em;
-        }
-
         .tagline {
-            font-size: 1rem;
-            color: var(--grey-mid);
-            font-weight: 300;
+            font-size: 1.75rem;
+            color: var(--black);
+            font-weight: 500;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
@@ -226,8 +217,7 @@
                 <div class="logo-container">
                     <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                     <div class="logo-text">
-                        <h1 class="logo">CPLD</h1>
-                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                        <p class="tagline">Chilean Political Landscape Dataset</p>
                     </div>
                 </div>
             </a>
@@ -238,7 +228,7 @@
                 <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <a href="cpld-about.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">English</a>
                     <span style="color: var(--grey-light);">|</span>
-                    <span style="color: var(--black); font-weight: 500;">Español</span>
+                    <span style="color: var(--black); font-weight: 500;">EspaÃ±ol</span>
                 </span>
             </nav>
         </header>
@@ -247,120 +237,120 @@
             <h1 class="page-title">Acerca de CPLD</h1>
 
             <div class="content">
-                <p>El <strong>Chilean Political Landscape Dataset (CPLD)</strong> es la primera base de datos longitudinal integral de su tipo, consolidando resultados electorales a nivel distrital a lo largo de más de tres décadas de democracia chilena, desde 1989 hasta 2024. <strong>La versión 1.0</strong> contiene 5.301 observaciones en 42 variables. El dataset se actualiza regularmente para incorporar nuevos resultados electorales e indicadores refinados, con versiones futuras que expandirán la cobertura a medida que ocurran nuevas elecciones.</p>
+                <p>El <strong></p>
 
                 <h2 class="section-title">Los Datos</h2>
                 
-                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basó en agregados nacionales que oscurecían dinámicas subyacentes—variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
+                <p>Este dataset aborda una brecha crÃ­tica en la investigaciÃ³n polÃ­tica chilena. Gran parte de la literatura existente se basÃ³ en agregados nacionales que oscurecÃ­an dinÃ¡micas subyacentesâ€”variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un anÃ¡lisis mÃ¡s matizado de la evoluciÃ³n del sistema de partidos, reformas institucionales y dinÃ¡micas electorales a nivel subnacional.</p>
 
-                <p>Al ofrecer medidas consistentes y comparables en un número variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideológico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cómo la democracia chilena, alguna vez estable, evolucionó a través de períodos de reforma institucional y crisis política.</p>
+                <p>Al ofrecer medidas consistentes y comparables en un nÃºmero variable de distritos (dependiendo del tipo de elecciÃ³n: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 aÃ±os, el CPLD permite a los investigadores detectar patrones invisibles en las estadÃ­sticas agregadas: el inicio temprano de la fragmentaciÃ³n del sistema de partidos, el desplazamiento ideolÃ³gico a nivel distrital y cambios asimÃ©tricos en todo el espectro polÃ­tico. Este nivel de detalle es esencial para comprender cÃ³mo la democracia chilena, alguna vez estable, evolucionÃ³ a travÃ©s de perÃ­odos de reforma institucional y crisis polÃ­tica.</p>
 
                 <h2 class="section-title">Alcance de la base de datos</h2>
 
                 <p>El CPLD v1.0 incluye <strong>5.301 observaciones en 42 variables</strong> cubriendo:</p>
 
                 <ul>
-                    <li><strong>Elecciones legislativas:</strong> Cámara de Diputados y Senado</li>
+                    <li><strong>Elecciones legislativas:</strong> CÃ¡mara de Diputados y Senado</li>
                     <li><strong>Elecciones regionales:</strong> Gobernadores y consejos regionales (Cores)</li>
                     <li><strong>Elecciones municipales:</strong> Alcaldes y concejos municipales (Concejales)</li>
                     <li><strong>Convenciones Constitucionales:</strong> Constituyentes (2022 y 2023)</li>
                 </ul>
 
-                <p>El número de distritos varía según el tipo de elección y período: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografía electoral evolutiva de Chile.</p>
+                <p>El nÃºmero de distritos varÃ­a segÃºn el tipo de elecciÃ³n y perÃ­odo: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografÃ­a electoral evolutiva de Chile.</p>
 
                 <div class="highlight-box">
-                    <strong>Versión actual:</strong> v1.0 · <strong>Tamaño:</strong> 1,8MB · <strong>Actualizado:</strong> Noviembre 2025 · <strong>Versiones futuras:</strong> Se expandirán a medida que ocurran nuevas elecciones
+                    <strong>VersiÃ³n actual:</strong> v1.0 Â· <strong>TamaÃ±o:</strong> 1,8MB Â· <strong>Actualizado:</strong> Noviembre 2025 Â· <strong>Versiones futuras:</strong> Se expandirÃ¡n a medida que ocurran nuevas elecciones
                 </div>
 
                 <h2 class="section-title">Variables Clave</h2>
 
-                <p>La base de datos incluye 42 variables estandarizadas organizadas en varias categorías:</p>
+                <p>La base de datos incluye 42 variables estandarizadas organizadas en varias categorÃ­as:</p>
 
                 <p><strong>Estructura Electoral:</strong></p>
                 <ul>
-                    <li>Tipo de elección, sistema electoral, características distritales</li>
-                    <li>Magnitud de distrito (dm), tamaño de asamblea (as), producto de escaños (sp)</li>
-                    <li>Número de listas, candidatos y candidatos independientes</li>
+                    <li>Tipo de elecciÃ³n, sistema electoral, caracterÃ­sticas distritales</li>
+                    <li>Magnitud de distrito (dm), tamaÃ±o de asamblea (as), producto de escaÃ±os (sp)</li>
+                    <li>NÃºmero de listas, candidatos y candidatos independientes</li>
                 </ul>
 
                 <p><strong>Indicadores del Sistema de Partidos:</strong></p>
                 <ul>
-                    <li>Número efectivo de partidos por votos (enpv) y escaños (enps)</li>
+                    <li>NÃºmero efectivo de partidos por votos (enpv) y escaÃ±os (enps)</li>
                     <li>Medidas NEP a nivel distrital y nacional</li>
-                    <li>Índices de nacionalización del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
+                    <li>Ãndices de nacionalizaciÃ³n del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
                 </ul>
 
-                <p><strong>Índices de Desproporcionalidad:</strong></p>
+                <p><strong>Ãndices de Desproporcionalidad:</strong></p>
                 <ul>
                     <li>Rae, Loosemore-Hanby, Lijphart I & II</li>
-                    <li>Índices Gallagher, Cox-Shugart</li>
+                    <li>Ãndices Gallagher, Cox-Shugart</li>
                 </ul>
 
-                <p><strong>Medidas Ideológicas:</strong></p>
+                <p><strong>Medidas IdeolÃ³gicas:</strong></p>
                 <ul>
-                    <li>Índices de polarización (Dalton) a nivel distrital y nacional</li>
-                    <li>Posición ideológica promedio (av_id)</li>
-                    <li>Porcentajes de votos mínimos y máximos por lista</li>
+                    <li>Ãndices de polarizaciÃ³n (Dalton) a nivel distrital y nacional</li>
+                    <li>PosiciÃ³n ideolÃ³gica promedio (av_id)</li>
+                    <li>Porcentajes de votos mÃ­nimos y mÃ¡ximos por lista</li>
                 </ul>
 
-                <p><strong>Social y Demográfico:</strong></p>
+                <p><strong>Social y DemogrÃ¡fico:</strong></p>
                 <ul>
-                    <li>Fraccionamiento étnico (ethnic_frac)</li>
-                    <li>Porcentajes de población indígena (ethnic_number, ethnic_presence)</li>
-                    <li>Votos válidos como proxy del tamaño del distrito</li>
-                    <li>Número de subunidades (comunas) dentro de los distritos</li>
+                    <li>Fraccionamiento Ã©tnico (ethnic_frac)</li>
+                    <li>Porcentajes de poblaciÃ³n indÃ­gena (ethnic_number, ethnic_presence)</li>
+                    <li>Votos vÃ¡lidos como proxy del tamaÃ±o del distrito</li>
+                    <li>NÃºmero de subunidades (comunas) dentro de los distritos</li>
                 </ul>
 
-                <h2 class="section-title">Aplicaciones de Investigación</h2>
+                <h2 class="section-title">Aplicaciones de InvestigaciÃ³n</h2>
 
                 <p>El CPLD permite a los investigadores:</p>
 
                 <ul>
-                    <li>Examinar el momento y los patrones de fragmentación del sistema de partidos</li>
-                    <li>Analizar la reestructuración ideológica a nivel distrital</li>
+                    <li>Examinar el momento y los patrones de fragmentaciÃ³n del sistema de partidos</li>
+                    <li>Analizar la reestructuraciÃ³n ideolÃ³gica a nivel distrital</li>
                     <li>Evaluar el impacto de las reformas electorales (particularmente la reforma de 2015)</li>
-                    <li>Estudiar la fragmentación asimétrica en el espectro político</li>
-                    <li>Investigar la relación entre diversidad social y resultados electorales</li>
-                    <li>Realizar modelado jerárquico y análisis espacial</li>
-                    <li>Probar teorías de sistemas electorales y competencia partidaria</li>
+                    <li>Estudiar la fragmentaciÃ³n asimÃ©trica en el espectro polÃ­tico</li>
+                    <li>Investigar la relaciÃ³n entre diversidad social y resultados electorales</li>
+                    <li>Realizar modelado jerÃ¡rquico y anÃ¡lisis espacial</li>
+                    <li>Probar teorÃ­as de sistemas electorales y competencia partidaria</li>
                 </ul>
 
                 <h2 class="section-title">Hallazgos Clave</h2>
 
-                <p>La investigación usando el CPLD ha revelado conocimientos importantes que desafían la sabiduría convencional:</p>
+                <p>La investigaciÃ³n usando el CPLD ha revelado conocimientos importantes que desafÃ­an la sabidurÃ­a convencional:</p>
 
                 <ul>
-                    <li><strong>La fragmentación comenzó antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentación del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
-                    <li><strong>Desplazamiento ideológico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
-                    <li><strong>Fragmentación asimétrica:</strong> La fragmentación se ha concentrado desproporcionadamente en la izquierda, con más partidos pero más pequeños en comparación con la derecha</li>
+                    <li><strong>La fragmentaciÃ³n comenzÃ³ antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentaciÃ³n del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
+                    <li><strong>Desplazamiento ideolÃ³gico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
+                    <li><strong>FragmentaciÃ³n asimÃ©trica:</strong> La fragmentaciÃ³n se ha concentrado desproporcionadamente en la izquierda, con mÃ¡s partidos pero mÃ¡s pequeÃ±os en comparaciÃ³n con la derecha</li>
                 </ul>
 
-                <h2 class="section-title">Metodología</h2>
+                <h2 class="section-title">MetodologÃ­a</h2>
 
-                <p>La base de datos fue construido utilizando el lenguaje de programación R (versión 4.2.3) con paquetes clave incluyendo codebookr, dplyr, tidyr, readxl y officer. Todos los resultados electorales fueron recolectados sistemáticamente de fuentes oficiales (SERVEL) y estandarizados para comparación temporal cruzada.</p>
+                <p>La base de datos fue construido utilizando el lenguaje de programaciÃ³n R (versiÃ³n 4.2.3) con paquetes clave incluyendo codebookr, dplyr, tidyr, readxl y officer. Todos los resultados electorales fueron recolectados sistemÃ¡ticamente de fuentes oficiales (SERVEL) y estandarizados para comparaciÃ³n temporal cruzada.</p>
 
-                <p>Todas las medidas siguen estándares establecidos de política comparada con la atribución apropiada:</p>
+                <p>Todas las medidas siguen estÃ¡ndares establecidos de polÃ­tica comparada con la atribuciÃ³n apropiada:</p>
                 <ul>
-                    <li><strong>Cálculos NEP:</strong> Laakso & Taagepera (1979)</li>
-                    <li><strong>Índices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
-                    <li><strong>Polarización:</strong> Dalton (2008)</li>
-                    <li><strong>Nacionalización:</strong> Jones & Mainwaring (2003), Chhibber & Kollman (2004)</li>
-                    <li><strong>Posiciones ideológicas:</strong> Bunker (2025)</li>
-                    <li><strong>Fraccionamiento étnico:</strong> Alesina et al. (2003), datos del Censo chileno (2002, 2017)</li>
+                    <li><strong>CÃ¡lculos NEP:</strong> Laakso & Taagepera (1979)</li>
+                    <li><strong>Ãndices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
+                    <li><strong>PolarizaciÃ³n:</strong> Dalton (2008)</li>
+                    <li><strong>NacionalizaciÃ³n:</strong> Jones & Mainwaring (2003), Chhibber & Kollman (2004)</li>
+                    <li><strong>Posiciones ideolÃ³gicas:</strong> Bunker (2025)</li>
+                    <li><strong>Fraccionamiento Ã©tnico:</strong> Alesina et al. (2003), datos del Censo chileno (2002, 2017)</li>
                 </ul>
 
-                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros históricos y están documentados en el libro de códigos.</p>
+                <p>La estructura de la base de datos permite modelado jerÃ¡rquico, anÃ¡lisis espacial y anÃ¡lisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros histÃ³ricos y estÃ¡n documentados en el libro de cÃ³digos.</p>
 
-                <h2 class="section-title">Citación</h2>
+                <h2 class="section-title">CitaciÃ³n</h2>
 
-                <p>Al utilizar el CPLD en su investigación, por favor cite tanto la base de datos como la publicación asociada:</p>
+                <p>Al utilizar el CPLD en su investigaciÃ³n, por favor cite tanto la base de datos como la publicaciÃ³n asociada:</p>
 
                 <div class="highlight-box">
                     <strong>Base de Datos:</strong><br>
                     Bunker, Kenneth. 2025. "Chilean Political Landscape Dataset (CPLD)". Harvard Dataverse, V1.<br>
                     DOI: <a href="https://doi.org/10.7910/DVN/NGRY3R" style="color: var(--blue);" target="_blank">10.7910/DVN/NGRY3R</a><br><br>
 
-                    <strong>Publicación:</strong><br>
+                    <strong>PublicaciÃ³n:</strong><br>
                     Bunker, Kenneth. 2025. "Decades of democracy: insights into the political landscape of Chile." <em>Humanities and Social Sciences Communications</em> 12, Article 1911.<br>
                     DOI: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--blue);" target="_blank">10.1057/s41599-025-06180-1</a>
                 </div>
@@ -369,6 +359,6 @@
 
         <footer>
             <p>Kenneth Bunker</p>
-            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
+            <p style="margin-top: 0.5rem;">Universidad San SebastiÃ¡n Â· Laboratorio Democracia y Gobierno</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">Â© 2026 CPLD Â· Licenciado bajo CC BY-NC-ND 4.0</p>
         </footer> 
