--- a/cpld/index.html
+++ b/cpld/index.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CLPD · Chilean Political Landscape Dataset</title>
+    <title>CLPD Â· Chilean Political Landscape Dataset</title>
     <meta name="description" content="Longitudinal dataset of district-level electoral outcomes covering Chilean democracy 1989-2024. Party system fragmentation, ideological orientation, ENP measures, and institutional change data. Ready for R and Python analysis.">
     <meta name="keywords" content="Chile political data, Chilean elections dataset, party system fragmentation, electoral competition Chile, political science dataset, comparative politics data, Latin America elections, ENP measures, district-level data, R dataset, Python pandas data, political landscape Chile, democracy dataset, longitudinal political data, Harvard Dataverse, electoral systems, disproportionality indices, Gallagher index, party nationalization, ideological polarization">
     <meta name="author" content="Kenneth Bunker">
@@ -21,7 +21,7 @@
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://kennethbunker.github.io/cpld/">
-    <meta property="og:title" content="Chilean Political Landscape Dataset (CPLD) · 1989-2024">
+    <meta property="og:title" content="Chilean Political Landscape Dataset (CPLD) Â· 1989-2024">
     <meta property="og:description" content="Comprehensive district-level electoral data covering 35 years of Chilean democracy. 5,301 observations across 42 variables. Open access dataset for political science research.">
     <meta property="og:image" content="https://kennethbunker.github.io/cpld/logo.png">
     <meta property="og:image:width" content="500">
@@ -48,7 +48,7 @@
         "@type": "Person",
         "name": "Kenneth Bunker",
         "affiliation": [
-          {"@type": "Organization", "name": "Universidad San Sebastián"},
+          {"@type": "Organization", "name": "Universidad San SebastiÃ¡n"},
           {"@type": "Organization", "name": "University of Verona"}
         ]
       },
@@ -133,8 +133,7 @@
         .logo-text {
             flex: 1;
             display: flex;
-            flex-direction: column;
-            justify-content: space-between;
+            align-items: center;
         }
 
         .nav-tabs {
@@ -162,19 +161,11 @@
             font-weight: 500;
         }
 
-        .logo {
-            font-family: 'JetBrains Mono', monospace;
-            font-size: 2rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 0.25rem;
-            letter-spacing: -0.02em;
-        }
-
         .tagline {
-            font-size: 1rem;
-            color: var(--grey-mid);
-            font-weight: 300;
+            font-size: 1.75rem;
+            color: var(--black);
+            font-weight: 500;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
@@ -324,7 +315,7 @@
         }
 
         .link-primary:hover::before {
-            content: '→';
+            content: 'â†’';
             position: absolute;
             left: -1.5rem;
             opacity: 1;
@@ -450,8 +441,7 @@
             <div class="logo-container">
                 <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                 <div class="logo-text">
-                    <h1 class="logo">CPLD</h1>
-                    <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                    <p class="tagline">Chilean Political Landscape Dataset</p>
                 </div>
             </div>
             <nav class="nav-tabs">
@@ -461,7 +451,7 @@
                 <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <span style="color: var(--black); font-weight: 500;">English</span>
                     <span style="color: var(--grey-light);">|</span>
-                    <a href="index-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
+                    <a href="index-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">EspaÃ±ol</a>
                 </span>
             </nav>
         </header>
@@ -469,7 +459,7 @@
         <h1 class="page-title">Overview</h1>
 
         <div class="description">
-            <p>The <strong>Chilean Political Landscape Dataset (CLPD)</strong> is a longitudinal dataframe of <strong>district-level electoral outcomes</strong> spanning across four decades of Chilean democracy. It contains standardized measures of party system fragmentation, ideological orientation, and institutional change across legislative, regional, and municipal contests. <strong>Version 1.0</strong> contains 5,301 observations and will expand as new electoral data become available.</p>
+            <p>The <strong></p>
             <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--grey-mid);">Data formats optimized for Python (pandas) and R (tidyverse) workflows.</p>
         </div>
 
@@ -510,7 +500,7 @@
             <ul class="link-list">
                 <li class="link-item">
                     <a href="https://doi.org/10.7910/DVN/NGRY3R" class="link-primary" target="_blank">Download Dataset</a>
-                    <div class="link-meta">Harvard Dataverse · DOI: 10.7910/DVN/NGRY3R</div>
+                    <div class="link-meta">Harvard Dataverse Â· DOI: 10.7910/DVN/NGRY3R</div>
                 </li>
                 <li class="link-item">
                     <a href="https://doi.org/10.7910/DVN/NGRY3R" class="link-primary" target="_blank">Codebook</a>
@@ -534,7 +524,7 @@ cpld <span class="code-keyword">&lt;-</span> <span class="code-keyword">read_csv
 
 <span class="code-comment"># Explore key variables</span>
 <span class="code-keyword">glimpse</span>(cpld)
-<span class="code-comment"># 5,301 × 42 variables including:</span>
+<span class="code-comment"># 5,301 Ã— 42 variables including:</span>
 <span class="code-comment"># enpv, enps, polarization_district, av_id, ethnic_frac</span>
             </div>
 
@@ -634,19 +624,19 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
             <ul class="link-list">
                 <li class="link-item">
                     <a href="https://doi.org/10.1057/s41599-025-06180-1" class="link-primary" target="_blank">Decades of Democracy </a>
-                    <div class="link-meta">Humanities and Social Sciences Communications · doi: 10.1057/s41599-025-06180-1</div>
+                    <div class="link-meta">Humanities and Social Sciences Communications Â· doi: 10.1057/s41599-025-06180-1</div>
                 </li>
                 <li class="link-item">
                     <a href="https://doi.org/10.1007/978-3-031-96463-3" class="link-primary" target="_blank">Chile's Transformation Amidst Crisis </a>
-                    <div class="link-meta">Palgrave Macmillan · doi: 10.1007/978-3-031-96463-3</div>
+                    <div class="link-meta">Palgrave Macmillan Â· doi: 10.1007/978-3-031-96463-3</div>
                 </li>
                 <li class="link-item">
                     <a href="https://doi.org/10.1089/elj.2024.0064" class="link-primary" target="_blank">Challenging Conventional Wisdom in New Democracies </a>
-                    <div class="link-meta">Election Law Journal · doi: 10.1089/elj.2024.0064</div>
+                    <div class="link-meta">Election Law Journal Â· doi: 10.1089/elj.2024.0064</div>
                 </li>
                 <li class="link-item">
                     <a href="https://doi.org/10.1080/13569317.2025.2452179" class="link-primary" target="_blank">Mapping Party Systems Over Time </a>
-                    <div class="link-meta">Journal of Political Ideologies · doi: 10.1080/13569317.2025.2452179</div>
+                    <div class="link-meta">Journal of Political Ideologies Â· doi: 10.1080/13569317.2025.2452179</div>
                 </li>
             </ul>
         </section>
@@ -671,6 +661,6 @@ doi: <a href="https://doi.org/10.1057/s41599-025-06180-1" style="color: var(--bl
 
         <footer>
             <p>Kenneth Bunker</p>
-            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
+            <p style="margin-top: 0.5rem;">Universidad San SebastiÃ¡n Â· Laboratorio Democracia y Gobierno</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">Â© 2026 CPLD Â· Licensed under CC BY-NC-ND 4.0</p>
         </footer> 
